# baremetal

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  doxygen.m
cmake/: aarch64-none-linux-gnu.cmake  am6254.cmake
code/arch/: CMakeLists.txt
code/arch/armv8-a/include/: arch_compiler.h  arch_types.h
code/arch/armv8-a/src/: arch_cache.s  arch_startup.s  arch_system.s  arch_vectors.s
code/arch/gic/include/: arch_gic.h  arch_gic_v3.h
code/mcore/armv8-a/: CMakeLists.txt
code/mcore/armv8-a/include/: arch_compiler.h  arch_gic.h
code/mcore/armv8-a/src/: arch_init.c  arch_startup.s  arch_vectors.s
core/aarch64/include/: arch_cache.h  arch_compiler.h  arch_gicc.h  arch_gicd.h  arch_init.h  arch_libc.h  arch_pmu.h
core/aarch64/src/: arch_cache.s  arch_gicc.s  arch_gicd.s  arch_init.c  arch_libc.c  arch_pmu.s  arch_startup.s  arch_system.s  arch_vectors.s
core/gic/include/: gic_dist.h
core/gic/src/: gic_dist.c
script/links/: am6254.lds  am6254_m4.lds  h616.lds
script/trace32/: range_pi3_lts.cmm
script/trace32/am6254/: a53_attach.cmm  am62x-cm4-sms0-tifs_connect.cmm  am62x-cr5_runtime_memory_access.cmm  am62x_attach.cmm  configure_ddr.cmm  configure_ddr_controller.cmm
